# Barlow-twin-Byol

./: .gitignore  README.md  augmentations.py  conv_wav_mel.py  dvc.yaml  main.py  models.py  params.yaml  pyproject.toml  requirements.txt  requirements.yaml  test.ipynb  test.py  todos.md
models/: .gitignore
optuna/: barlowtwins__emb_dim_size=1024.db  barlowtwins__emb_dim_size=1024__adj_lr=1e-6-1e-10.db  barlowtwins__emb_dim_size=256.db
src/swarm/: augmentations.py  callbacks.py  config.py  conv_wav_mel.py  dataset.py  datasets.py  fetch_kaggle_dataset.py  hyperparam_search.py  linear_eval.py  losses.py  main.py  models.py  optimizers.py  preprocess_audio.py  preprocess_audioset.py  preprocess_gtzan.py  test.py  train.py  utils.py
src/swarm/configs/: augmentations.py  dataset_gtzan.py  spectrograms.py  training.py
src/swarm/preprocess/: audioset.py  gtzan.py  tools.py
